@@ -23,6 +23,7 @@ README
 SIGNATURE
 t/lib/BadComponent.pm
 t/lib/Hello.pm
+t/lib/HelloConstructorArg.pm
 t/lib/HelloCSS.pm
 t/lib/HelloData.pm
 t/lib/HelloInit.pm
@@ -32,10 +33,11 @@ t/Plack-App-Tags-HTML/01-use.t
 t/Plack-App-Tags-HTML/02-version.t
 t/Plack-App-Tags-HTML/03-app-bad_component.t
 t/Plack-App-Tags-HTML/04-app-hello.t
-t/Plack-App-Tags-HTML/05-app-hello-data.t
-t/Plack-App-Tags-HTML/06-app-hello-data_css.t
-t/Plack-App-Tags-HTML/07-app-hello-init.t
-t/Plack-App-Tags-HTML/08-app-hello-inline.t
-t/Plack-App-Tags-HTML/09-app-hello-prepare.t
+t/Plack-App-Tags-HTML/05-app-hello-constructor_arg.t
+t/Plack-App-Tags-HTML/06-app-hello-data.t
+t/Plack-App-Tags-HTML/07-app-hello-data_css.t
+t/Plack-App-Tags-HTML/08-app-hello-init.t
+t/Plack-App-Tags-HTML/09-app-hello-inline.t
+t/Plack-App-Tags-HTML/10-app-hello-prepare.t
 xt/Plack-App-Tags-HTML/01-pod_coverage.t
 xt/Plack-App-Tags-HTML/02-pod.t
